# finlab

./: .gitignore  README.md  pyproject.toml
.guardrails/: hub_registry.json
api/: main.py
api/config/: prompts.py  settings.py
api/models/: agent.py  rag.py  search.py
api/routers/: agent.py  rag.py  search.py
api/services/: agent.py  embeddings.py  rag.py  search.py  ticker_extractor.py
evaluations/: level_1_unit_tests.py  level_2_integration_tests.py  level_3_human_annonation.py  level_4_llm_as_judge.py
guardrails/: guardrails_demo_1_input.py  guardrails_demo_1_output.py  guardrails_demo_2.py  guardrails_demo_3.py
ingestion/: create_collection.py  create_indexes.py  ingestion.py  news_ingestion.py  test_query.py
ingestion/utils/: edgar_client.py  news_client.py  semantic_chunker.py  simple_chunker.py
