[project]
name = "finlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edgartools>=5.41.0",
    "fastapi>=0.138.2",
    "groq>=1.5.0",
    "hdbscan>=0.8.44",
    "instructor>=1.15.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client[fastembed]>=1.18.0",
    "ruff>=0.15.20",
    "sentence-transformers>=5.6.0",
    "trafilatura>=2.1.0",
    "transformers>=5.13.0",
    "uvicorn>=0.49.0",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
